[tool.poetry]
name = "newt"
version = "0.1.0"
description = "Newt is a Telegram Bot posting news feed."
authors = ["Samuel Rince"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^12.7"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
